Project desc text alignment corrected

--- a/src/components/body/projects/project-card.css
+++ b/src/components/body/projects/project-card.css
@@ -13,6 +13,10 @@
     font-weight: 600;
 }
 
+.project-desc {
+    text-align: justify;
+}
+
 .project-tags {
     display: flex;
     max-width: 100%;
